--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ section {
     align-items: center;
     position: relative;
     overflow: hidden;
+    padding-top: 90px;
 }
 
 
@@ -720,6 +721,7 @@ section {
     align-items: center;
     padding: 100px 0 50px;
     position: relative;
+    padding-top: 90px;
 }
 
 .contact-section::before {
